<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitStart"
        android:src="@drawable/cloud_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/main_activity_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/purple_500"
        android:drawableStart="@android:drawable/ic_dialog_map"
        android:drawablePadding="20dp"
        android:drawableTint="@color/purple_500"
        android:gravity="bottom"
        android:hint="@string/city"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_my_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_activity_my_location"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="30dp"
        android:src="@drawable/outline_my_location_24"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_activity_input"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/purple_500"
        app:cardCornerRadius="40dp"
        app:cardElevation="30dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_input">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_activity_title"
                style="@style/Theme.POC_sonar_analysis.Text.Primary.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/check_real_time_weather"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/main_activity_body"
                style="@style/Theme.POC_sonar_analysis.Text.Primary.Body"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingTop="20dp"
                android:text="@string/get_the_latest_information_from_the_city_of_your_choice_in_real_time"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/main_activity_current_weather_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/main_activity_current_weather_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:minHeight="40dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/next"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>